<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>de.cuioss</groupId>
        <artifactId>cui-java-parent</artifactId>
        <version>1.4.1</version>
        <relativePath />
    </parent>
    <groupId>de.cuioss.jsf</groupId>
    <artifactId>cui-jsf-components</artifactId>
    <name>cui core jsf</name>
    <version>1.1.0-SNAPSHOT</version>
    <description>Provides a number of JavaServer Faces modules.
    </description>
    <packaging>pom</packaging>
    <url>https://github.com/cuioss/cui-jsf-components/</url>
    <scm>
        <url>https://github.com/cuioss/cui-jsf-components/</url>
        <connection>scm:git:https://github.com/cuioss/cui-jsf-components.git</connection>
        <developerConnection>
            scm:git:https://github.com/cuioss/cui-jsf-components/
        </developerConnection>
        <tag>HEAD</tag>
    </scm>
    <issueManagement>
        <url>https://github.com/cuioss/cui-jsf-components/issues</url>
        <system>GitHub Issues</system>
    </issueManagement>
    <properties>
        <maven.compiler.release>21</maven.compiler.release>
        <!-- Needed for js / css -->
        <version.nodejs>v20.11.1</version.nodejs>
        <version.cui.portal.core>1.4.0</version.cui.portal.core>
    </properties>
    <modules>
        <module>bom</module>
        <module>modules</module>
        <module>web-modules</module>
    </modules>
</project>
